--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 envlist = py38, flake8, mypy
 isolated_build = true
 
+[gh-actions]
+python =
+    3.8: py38, mypy, flake8
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
