--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Bonny Babu
 author_email = bonnybabukachappilly@gmail.com
 description = A bridge between websocket and DDS of ROS 2
 long_description = file: README.md
+version=0.2.5
 long_description_content_type = text/markdown
 license = GNU GENERAL PUBLIC LICENSE Version 3
 license_file = LICENSE
